ccr-eval/fixtures/cargo_error.txt
   Compiling proc-macro2 v1.0.78
   Compiling unicode-ident v1.0.12
   Compiling serde v1.0.196
   Compiling libc v0.2.153
   Compiling cfg-if v1.0.0
   Compiling autocfg v1.1.0
   Compiling memchr v2.7.1
   Compiling regex-syntax v0.8.2
   Compiling semver v1.0.21
   Compiling serde_derive v1.0.196
   Compiling toml_datetime v0.6.5
   Compiling winnow v0.5.40
   Compiling toml_edit v0.21.1
   Compiling toml v0.8.10
   Compiling aho-corasick v1.1.2
   Compiling regex-automata v0.4.5
   Compiling regex v1.10.3
   Compiling once_cell v1.19.0
   Compiling anyhow v1.0.79
   Compiling dirs-sys v0.4.1
   Compiling dirs v5.0.1
   Compiling myapp v0.1.0 (/Users/dev/myapp)
error[E0308]: mismatched types
  --> src/main.rs:42:18
   |
42 |     let x: i32 = "hello";
   |            ---   ^^^^^^^ expected `i32`, found `&str`
   |            |
   |            expected due to this
   |
   = note: expected type `i32`
              found type `&str`
help: consider using a string conversion method
   |
42 |     let x: i32 = "hello".parse().unwrap();
   |                         +++++++++++++++++

error[E0425]: cannot find value `undefined_var` in this scope
  --> src/main.rs:55:10
   |
55 |     let y = undefined_var + 1;
   |             ^^^^^^^^^^^^^ not found in this scope
   |
help: a local variable with a similar name exists
   |
55 |     let y = defined_var + 1;
   |             ~~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about these errors, try `rustc --explain E0308`.
